--- a/index.html
+++ b/index.html
@@ -4,87 +4,81 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles/index.css">
-    <title>Sprint4</title>
+    <link rel="stylesheet" type="text/css" href="pages/index.css">
+    <title>Mesto-project</title>
 </head>
-<body class="page">
-    <section class="popup">        
-        <div class="popup__container">
-            <div class="button-close">
-                <img src="images/close-icon.svg" alt="кнопка закрыть" class="button-close__icon">
-            </div>
-            <form class="popup__edit-profile">
-                <h2 class="popup__heading">Задайте параметры</h2>
-                <input id="heading" name="heading" class="popup__item" type="text" placeholder="Жак-Ив Кусто" required>
-                <input id="heading" name="heading" class="popup__item" type="text" placeholder="Исследователь океана" required>
-                <button class="popup__button" type="submit">Сохранить</button>
-            </form>
-        </div>
-    </section>
+<body class="page">    
     <header class="header">
         <img class="header__logo" src="images/logo-vector.svg" alt="Логотип">
     </header>
     <main class="content">
-        <section class="profile">            
+        <section class="profile">           
             <img class="profile__avatar" src="images/avatar-image.jpg" alt="Аватар">                
             <div class="profile__info">
-                <p class="profile__name">Жак-Ив Кусто</p>
-                <div class="button-edit">
-                    <img src="images/edit-icon.svg" alt="иконка редактировать" class="button-edit__icon">
-                </div>
-                <p class="profile__proffession">Исследователь океана</p>
+                <h3 class="profile__name">Жак-Ив Кусто</h3>
+                <button class="button_theme_edit" type="submit"></button>
+                <h3 class="profile__proffession">Исследователь океана</h3>
             </div>
-            <div class="button-add">
-                <img src="images/add-icon.svg" alt="Иконка добавить" class="button-add__icon">
-            </div>
+            <button class="button_theme_add" type="submit"></button>
         </section>
-        <section class="elements">
-            <div class="element">
+        <div class="elements">
+            <article class="element">
                 <img src="images/card1-image.jpg" alt="Карачаево-Черкесия" class="element__image">
                 <div class="element__description">
-                    <p class="element__name">Карачаево-Черкесия</p>
-                    <img src="images/like-icon.svg" alt="лайк" class="element__like">
+                    <h3 class="element__name">Карачаево-Черкесия</h3>
+                    <button class="element__like" type="button"></button>                    
                 </div>
-            </div>
-            <div class="element">
+            </article>
+            <article class="element">
                 <img src="images/card1-image.jpg" alt="Карачаево-Черкесия" class="element__image">
                 <div class="element__description">
-                    <p class="element__name">Карачаево-Черкесия</p>
-                    <img src="images/like-icon.svg" alt="лайк" class="element__like">
+                    <h3 class="element__name">Карачаево-Черкесия</h3>
+                    <button class="element__like" type="button"></button>
                 </div>
-            </div>
-            <div class="element">
+            </article>
+            <article class="element">
                 <img src="images/card1-image.jpg" alt="Карачаево-Черкесия" class="element__image">
                 <div class="element__description">
-                    <p class="element__name">Карачаево-Черкесия</p>
-                    <img src="images/like-icon.svg" alt="лайк" class="element__like">
+                    <h3 class="element__name">Карачаево-Черкесия</h3>
+                    <button class="element__like" type="button"></button>
                 </div>
-            </div>
-            <div class="element">
+            </article>
+            <article class="element">
                 <img src="images/card1-image.jpg" alt="Карачаево-Черкесия" class="element__image">
                 <div class="element__description">
-                    <p class="element__name">Карачаево-Черкесия</p>
-                    <img src="images/like-icon.svg" alt="лайк" class="element__like">
+                    <h3 class="element__name">Карачаево-Черкесия</h3>
+                    <button class="element__like" type="button"></button>
                 </div>
-            </div>
-            <div class="element">
+            </article>
+            <article class="element">
                 <img src="images/card1-image.jpg" alt="Карачаево-Черкесия" class="element__image">
                 <div class="element__description">
-                    <p class="element__name">Карачаево-Черкесия</p>
-                    <img src="images/like-icon.svg" alt="лайк" class="element__like">
+                    <h3 class="element__name">Карачаево-Черкесия</h3>
+                    <button class="element__like" type="button"></button>
                 </div>
-            </div>
-            <div class="element">
+            </article>
+            <article class="element">
                 <img src="images/card1-image.jpg" alt="Карачаево-Черкесия" class="element__image">
                 <div class="element__description">
-                    <p class="element__name">Карачаево-Черкесия</p>
-                    <img src="images/like-icon.svg" alt="лайк" class="element__like">
+                    <h3 class="element__name">Карачаево-Черкесия</h3>
+                    <button class="element__like" type="button"></button>
                 </div>
-            </div>
-        </section>
+            </article>
+        </div>
     </main>
     <footer class="footer">    
         <p class="footer__copyright">&copy; 2021 Mesto Russia</p>
     </footer>
+    <div class="popup">
+        <div class="popup__container">
+            <button class="button_theme_close" type="submit"></button>
+            <form class="popup__edit" name="popup__edit">
+                <h2 class="popup__heading">Редактировать профиль</h2>
+                <input id="username" name="username" class="popup__item" type="text" placeholder="Жак-Ив Кусто" required>
+                <input id="profession" name="profession" class="popup__item" type="text" placeholder="Исследователь океана" required>
+                <button class="popup__button" type="submit">Сохранить</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
