correct after 3rd revue

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
     <footer class="footer">    
         <p class="footer__copyright">&copy; 2021 Mesto Russia</p>
     </footer>
-    <div class="popup">
+    <div class="popup popup_visible">
         <div class="popup__container">
             <button class="button button_theme_close" type="button"></button>
-            <form class="popup__form" name="popup__form">
+            <form class="popup__form-change-name" name="popup__form-change-name">
                 <h2 class="popup__heading">Редактировать профиль</h2>
                 <input id="username" name="username" class="popup__item" type="text" placeholder="Имя пользователя" required>
                 <input id="profession" name="profession" class="popup__item" type="text" placeholder="Профессия" required>
