corrected after 4th revue

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <footer class="footer">    
         <p class="footer__copyright">&copy; 2021 Mesto Russia</p>
     </footer>
-    <div class="popup popup_visible">
+    <div class="popup popup_unvisible">
         <div class="popup__container">
             <button class="button button_theme_close" type="button"></button>
             <form class="popup__form-change-name" name="popup__form-change-name">
