--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
             <h3 class="popup__name-image">Карачаево-Черкесия</h3>
         </div>
     </div>
-    <script src="./scripts/initial-card.js"></script>
-    <script src="./scripts/index.js"></script>
+    <script src="./components/card.js"></script>
+    <script src="./components/index.js"></script>
 </body>
 </html>
