after 1st revue 2nd version

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <main class="content">
         <section class="profile">
             <div class="profile__avatar-wrapper">
-                <img class="profile__avatar" src="" alt="Аватар">
+                <img class="profile__avatar profile__avatarImg" src="" alt="Аватар">
                 <button class="button profile__avatar-edit"></button>
             </div>                           
             <div class="profile__info">
