add class Section

--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
             <button class="button button_theme_close" type="button"></button>
             <form class="form popup__form-avatar-edit" name="popup__form-avatar-edit">
                 <h2 class="popup__heading">Обновить аватар</h2>
-                <input id="avatarLink" name="avatarLink" class="popup__item" type="url" placeholder="Ссылка на аватар" required>
+                <input id="avatarLink" name="avatar" class="popup__item" type="url" placeholder="Ссылка на аватар" required>
                 <span class="popup__input-errors avatarLink-error" id="elementLink-error"></span>
                 <button class="popup__button " type="submit">Сохранить</button>
             </form>
