--- a/src/index.html
+++ b/src/index.html
@@ -60,9 +60,9 @@
             <button class="button button_theme_close" type="button"></button>
             <form class="form popup__form-add-card" name="popup__form-add-card">
                 <h2 class="popup__heading">Новое место</h2>
-                <input id="elementName" name="elementName" class="popup__item" type="text" placeholder="Название" required>
+                <input id="elementName" name="name" class="popup__item" type="text" placeholder="Название" required>
                 <span class="popup__input-errors elementName-error" id="elementName-error"></span>
-                <input id="elementLink" name="elementLink" class="popup__item" type="url" placeholder="Ссылка на картинку" required>
+                <input id="elementLink" name="link" class="popup__item" type="url" placeholder="Ссылка на картинку" required>
                 <span class="popup__input-errors elementLink-error" id="elementLink-error"></span>
                 <button class="popup__button " type="submit">Сохранить</button>
             </form>
