--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
             <button class="button button_theme_add" type="button"></button>
         </section>
         <section class="elements">
-            <template id='element'>
+            <template id='element' class ='element'>
                 <article class="element">
                     <img src="" alt="" class="element__image">
                     <button class="element__delete" type="button"></button>
