--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
                 <h2 class="popup__heading">Редактировать профиль</h2>
                 <input id="username" name="username" class="popup__item" type="text" minlength="2" maxlength="40" placeholder="Имя пользователя" required>
                 <span class="popup__input-errors username-error" id="username-error"></span>
-                <input id="profession" name="profession" class="popup__item" type="text"  minlength="2" maxlength="200" placeholder="Профессия" required>
+                <input id="profession" name="profession" class="popup__item popup-profession" type="text"  minlength="2" maxlength="200" placeholder="Профессия" required>
                 <span class="popup__input-errors profession-error" id="profession-error"></span>
                 <button class="popup__button" type="submit">Сохранить</button>
             </form>
